# rust-wallet

./: .travis.yml  Cargo.toml  README.md
rust-wallet-grpc/: Cargo.toml
rust-wallet-grpc/src/: client.rs  main.rs  server.rs  walletrpc.rs  walletrpc_grpc.rs
rust-wallet-grpc/tests/: tests.rs
src/: chainntfs.rs  lib.rs  server.rs  wallet.rs
tests/: tests.rs
wallet/: Cargo.toml
wallet/src/: account.rs  accountfactory.rs  context.rs  db.rs  default.rs  electrumx.rs  environment.rs  error.rs  interface.rs  keyfactory.rs  lib.rs  mnemonic.rs  storage.rs  walletlibrary.rs
wallet/tests/: tests.rs
