[package]
name = "rust-wallet-grpc"
version = "0.1.0"
authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
edition = "2018"

[[bin]]
name = "wallet"
path = "src/main.rs"

[[bin]]
name = "wallet-cli"
path = "src/bin/client.rs"

[[bin]]
name = "gen_protos"
path = "src/bin/gen_protos.rs"

[dependencies.bitcoin]
git = "https://github.com/LightningPeach/rust-bitcoin.git"
features = ["use-serde"]

[dependencies.bitcoin_hashes]
version = "0.7"
features = ["serde"]

[dependencies]
wallet = { path = "../wallet" }

protoc-rust-grpc = "0.6"
grpc = "0.6"
protobuf = "2.8"
tls-api = "0.1"
tls-api-native-tls = "0.1"
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git", package = "bitcoincore-rpc" }
log = "0.4"
hex = "0.3"
structopt = "0.3"
simple_logger = "1.0"
