[package]
name = "wallet"
version = "0.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-wallet/"
repository = "https://github.com/rust-bitcoin/rust-wallet/"
documentation = "https://github.com/rust-bitcoin/rust-wallet/"
description = "Wallet library for Bitcoin"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"
edition = "2018"

[lib]
name = "wallet"
path = "src/lib.rs"

[dependencies.bitcoin]
git = "https://github.com/LightningPeach/rust-bitcoin.git"
features = ["use-serde"]

[dependencies.bitcoin_hashes]
version = "0.7"
features = [ "serde" ]

[dependencies.secp256k1]
package = "secp256k1-pure-rust"
git = "https://github.com/LightningPeach/secp256k1-wrapper.git"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies]
rust-crypto = { git = "https://github.com/LightningPeach/rust-crypto.git" }
log = "0.4"
simple_logger = "1.0"
hex = "0.3"
bitcoin-bech32 = "0.9"
byteorder = "1.3"
electrumx_client = { git = "https://github.com/LightningPeach/rust-electrumx-client.git" }
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git", package = "bitcoincore-rpc" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rocksdb]
version = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rand]
version = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies.rand]
version = "0.6"
features = ["wasm-bindgen"]

[dev-dependencies]
rustc-serialize = "0.3"
tc_coblox_bitcoincore = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
testcontainers = { git = "https://github.com/rust-bitcoin-tools/testcontainers-rs.git", branch = "zmq_support" }
